
  From Daniel Moody:
    - Add no_progress (-Q) option as a set-able option. However, setting it in the 
      SConstruct/SConscript will still cause "scons: Reading SConscript files ..." to be
      printed, since the option is not set when the build scripts first get read.
    - Added check for SONAME in environment to setup symlinks correctly (Github Issue #3246)

  From James Benton:
    - Improve Visual Studio solution/project generation code to add support
      for a per-variant cppflags. Intellisense can be affected by cppflags,
      this is especially important when it comes to /std:c++* which specifies
      what C++ standard version to target. SCons will append /Zc:__cplusplus
      to the project's cppflags when a /std:c++* flag is found as this is
      required for intellisense to use the C++ standard version from cppflags.

  From Rob Boehne
    - Specify UTF-8 encoding when opening Java source file as text.  By default, encoding is the output
    of locale.getpreferredencoding(False), and varies by platform.

  From William Deegan:
    - Fix broken clang + MSVC 2019 combination by using MSVC configuration logic to
      propagate'VCINSTALLDIR' and 'VCToolsInstallDir' which clang tools use to locate
      header files and libraries from MSVC install. (Fixes GH Issue #3480)
    - Added C:\msys64\mingw64\bin to default mingw and clang windows PATH's.  This
      is a reasonable default and also aligns with changes in Appveyor's VS2019 image.
    - Drop support for Python 2.7. SCons will be Python 3.5+ going forward.
    - Change SCons.Node.ValueWithMemo to consider any name passed when memoizing Value() nodes
    - Fix Github Issue #3550 - When using Substfile() with a value like Z:\mongo\build\install\bin
      the implementation using re.sub() would end up interpreting the string and finding regex escape
      characters where it should have been simply replacing existing text. Switched to use string.replace().