@@ -15,6 +15,9 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
       SConstruct/SConscript will still cause "scons: Reading SConscript files ..." to be
       printed, since the option is not set when the build scripts first get read.
     - Added check for SONAME in environment to setup symlinks correctly (Github Issue #3246)
+    - Added storage of SConstructs and SConscripts nodes into global for checking
+      if a given node is a SConstruct/SConscript. Added SCons.FS.get_SConstructs(),
+      SCons.FS.get_SConscripts(), and SCons.Node.is_sconscript() (Github Issue #3625)
 
   From James Benton:
     - Improve Visual Studio solution/project generation code to add support
